# farg

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
.agents/agents/code-reviewer/: SKILL.md
.agents/agents/dependency-auditor/: SKILL.md
.agents/agents/doc-writer/: SKILL.md
.agents/agents/profiler/: SKILL.md
.agents/agents/test-runner/: SKILL.md
.agents/skills/changelog/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/format/: SKILL.md
.agents/skills/pr-description/: SKILL.md
.agents/skills/publish/: SKILL.md
.agents/skills/write-tests/: SKILL.md
.config/: .markdownlint.yml  editorconfig-checker.json  mise.toml  taplo.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  security.yml
docs/: CONTRIBUTING.md  PLAN.md  README.md
docs/design/: 0001-component-precision.md  0002-universal-color-space-access.md  0003-feature-gated-components.md  0004-spectral-data-architecture.md  0005-observer-system.md  0006-rgb-color-space-architecture.md  0007-color-space-module-taxonomy.md  README.md
docs/dev/: README.md  code-style.md  tasks.md  testing.md
docs/development/: README.md  code-style.md  tasks.md  testing.md
docs/policy/: README.md  ai.md  security.md
docs/process/: README.md  architecture-decision-record.md  request-for-comment.md
docs/usage/: README.md  cats.md  cct.md  contrast.md  conversions.md  cvd.md  distance.md  features.md  harmonies.md  illuminants.md  mixing.md  observers.md
src/: chromatic_adaptation_transform.rs  chromaticity.rs  color_vision_deficiency.rs  component.rs  context.rs  contrast.rs  correlated_color_temperature.rs  distance.rs  error.rs  illuminant.rs  lib.rs  matrix.rs  observer.rs  space.rs  spectral.rs
src/chromatic_adaptation_transform/: bradford.rs  cat02.rs  cat16.rs  cmc_cat2000.rs  cmc_cat97.rs  fairchild.rs  hunt_pointer_estevez.rs  sharp.rs  von_kries.rs  xyz_scaling.rs
src/chromaticity/: rg.rs  upvp.rs  uv.rs  xy.rs
src/color_vision_deficiency/: brettel.rs  machado.rs  vienot.rs
src/context/: colorimetric.rs
src/contrast/: aert.rs  apca.rs  michelson.rs  rms.rs  wcag.rs  weber.rs
src/correlated_color_temperature/: hernandez_andres.rs  mccamy.rs  ohno.rs  robertson.rs
src/distance/: cie76.rs  cie94.rs  ciecmc.rs  ciede2000.rs  euclidean.rs  manhattan.rs
src/illuminant/: a.rs  b.rs  c.rs  d50.rs  d55.rs  d65.rs  d75.rs  e.rs  fl1.rs  fl10.rs  fl11.rs  fl12.rs  fl2.rs  fl3.rs  fl3_1.rs  fl3_10.rs  fl3_11.rs  fl3_12.rs  fl3_13.rs  fl3_14.rs  fl3_15.rs  fl3_2.rs  fl3_3.rs  fl3_4.rs  fl3_5.rs  fl3_6.rs  fl3_7.rs  fl3_8.rs  fl3_9.rs  fl4.rs  fl5.rs  fl6.rs  fl7.rs  fl8.rs  fl9.rs  hp1.rs  hp2.rs  hp3.rs  hp4.rs  hp5.rs  (+11 more)
src/observer/: cie_1931_2d.rs  cie_1931_judd_2d.rs  cie_1931_judd_voss_2d.rs  cie_1964_10d.rs  cie_2006_10d.rs  cie_2006_2d.rs  fairchild_modifier.rs  stockman_sharpe_10d.rs  stockman_sharpe_2d.rs
src/space/: cie.rs  cmy.rs  cylindrical.rs  hsl.rs  hsv.rs  hwb.rs  lms.rs  perceptual.rs  physiological.rs  rgb.rs  subtractive.rs  xyz.rs
src/space/cie/: lab.rs  lch.rs  lchuv.rs  luv.rs  xyy.rs  xyz.rs
src/space/cylindrical/: hsi.rs  hsl.rs  hsv.rs  hwb.rs
src/space/perceptual/: hpluv.rs  hsluv.rs  okhsl.rs  okhsv.rs  okhwb.rs  oklab.rs  oklch.rs
src/space/physiological/: lms.rs
src/space/rgb/: linear.rs  primaries.rs  space.rs  spec.rs  transfer.rs
src/space/rgb/space/: aces_2065_1.rs  aces_cc.rs  aces_cct.rs  aces_cg.rs  adobe_rgb.rs  apple_rgb.rs  arri_wide_gamut_3.rs  arri_wide_gamut_4.rs  best_rgb.rs  beta_rgb.rs  blackmagic_wide_gamut.rs  bruce_rgb.rs  canon_cinema_gamut.rs  cie_rgb.rs  colormatch_rgb.rs  davinci_wide_gamut.rs  dci_p3.rs  display_p3.rs  don_rgb_4.rs  eci_rgb.rs  ektaspace_ps5.rs  filmlight_egamut.rs  linear_srgb.rs  ntsc.rs  pal_secam.rs  panasonic_vgamut.rs  prophoto_rgb.rs  rec2020.rs  rec2100_hlg.rs  rec2100_pq.rs  rec601.rs  rec709.rs  red_wide_gamut.rs  scrgb.rs  smpte_c.rs  sony_sgamut3.rs  sony_sgamut3_cine.rs  standard.rs  wide_gamut_rgb.rs
src/space/subtractive/: cmy.rs  cmyk.rs
src/spectral/: chromaticity_coordinates.rs  color_matching_function.rs  cone_fundamentals.rs  cone_response.rs  spectral_power_distribution.rs  tristimulus_response.rs
tasks/: build
tasks/generate/: task-docs
tasks/lint/: markdown
tests/: serde.rs
