[package]
authors = ["Aaron Allen <hello@aaronmallen.me>"]
description = "A Rust library for colorimetry, color space conversions, and color manipulation."
edition = "2024"
license = "MIT"
name = "farg"
repository = "https://git.aaronmallen.dev/farg/farg"
version = "0.1.0"

[features]
all-cats = [
  "cat-bradford",
  "cat-cat02",
  "cat-cat16",
  "cat-cmc-cat97",
  "cat-cmc-cat2000",
  "cat-fairchild",
  "cat-hunt-pointer-estevez",
  "cat-sharp",
  "cat-von-kries",
]
cat-bradford = []
cat-cat02 = []
cat-cat16 = []
cat-cmc-cat97 = []
cat-cmc-cat2000 = []
cat-fairchild = []
cat-hpe = ["cat-hunt-pointer-estevez"]
cat-hunt-pointer-estevez = []
cat-sharp = []
cat-von-kries = []
default = ["cat-bradford"]
full = ["all-cats"]

[dev-dependencies]
pretty_assertions = "1.4"
