[package]
authors = ["Aaron Allen <hello@aaronmallen.me>"]
description = "A Rust library for colorimetry, color space conversions, and color manipulation."
edition = "2024"
license = "MIT"
name = "farg"
repository = "https://git.aaronmallen.dev/farg/farg"
version = "0.1.0"

[features]
all-cats = [
  "cat-bradford",
  "cat-cat02",
  "cat-cat16",
  "cat-cmc-cat97",
  "cat-cmc-cat2000",
  "cat-fairchild",
  "cat-hunt-pointer-estevez",
  "cat-sharp",
  "cat-von-kries",
]
all-chromaticity = ["chromaticity-upvp", "chromaticity-uv"]
all-illuminants = [
  "illuminant-daylight",
  "illuminant-fluorescent",
  "illuminant-fluorescent-3",
  "illuminant-hp",
  "illuminant-led",
  "illuminant-standard",
]
all-observers = [
  "observer-cie-1931-judd-2d",
  "observer-cie-1931-judd-vos-2d",
  "observer-cie-1964-10d",
  "observer-cie-2006-10d",
  "observer-cie-2006-2d",
  "observer-stockman-sharpe-10d",
  "observer-stockman-sharpe-2d",
]
cat-bradford = []
cat-cat02 = []
cat-cat16 = []
cat-cmc-cat97 = []
cat-cmc-cat2000 = []
cat-fairchild = []
cat-hpe = ["cat-hunt-pointer-estevez"]
cat-hunt-pointer-estevez = []
cat-sharp = []
cat-von-kries = []
chromaticity-upvp = []
chromaticity-uv = []
default = ["cat-bradford"]
full = ["all-cats", "all-chromaticity", "all-illuminants", "all-observers"]
illuminant-a = []
illuminant-b = []
illuminant-c = []
illuminant-d50 = []
illuminant-d55 = []
illuminant-d75 = []
illuminant-daylight = [
  "illuminant-d50",
  "illuminant-d55",
  "illuminant-d75",
  "illuminant-id50",
  "illuminant-id65",
]
illuminant-e = []
illuminant-fl1 = []
illuminant-fl10 = []
illuminant-fl11 = []
illuminant-fl12 = []
illuminant-fl2 = []
illuminant-fl3 = []
illuminant-fl3-1 = []
illuminant-fl3-10 = []
illuminant-fl3-11 = []
illuminant-fl3-12 = []
illuminant-fl3-13 = []
illuminant-fl3-14 = []
illuminant-fl3-15 = []
illuminant-fl3-2 = []
illuminant-fl3-3 = []
illuminant-fl3-4 = []
illuminant-fl3-5 = []
illuminant-fl3-6 = []
illuminant-fl3-7 = []
illuminant-fl3-8 = []
illuminant-fl3-9 = []
illuminant-fl4 = []
illuminant-fl5 = []
illuminant-fl6 = []
illuminant-fl7 = []
illuminant-fl8 = []
illuminant-fl9 = []
illuminant-fluorescent = [
  "illuminant-fl1",
  "illuminant-fl10",
  "illuminant-fl11",
  "illuminant-fl12",
  "illuminant-fl2",
  "illuminant-fl3",
  "illuminant-fl4",
  "illuminant-fl5",
  "illuminant-fl6",
  "illuminant-fl7",
  "illuminant-fl8",
  "illuminant-fl9",
]
illuminant-fluorescent-3 = [
  "illuminant-fl3-1",
  "illuminant-fl3-10",
  "illuminant-fl3-11",
  "illuminant-fl3-12",
  "illuminant-fl3-13",
  "illuminant-fl3-14",
  "illuminant-fl3-15",
  "illuminant-fl3-2",
  "illuminant-fl3-3",
  "illuminant-fl3-4",
  "illuminant-fl3-5",
  "illuminant-fl3-6",
  "illuminant-fl3-7",
  "illuminant-fl3-8",
  "illuminant-fl3-9",
]
illuminant-hp = [
  "illuminant-hp1",
  "illuminant-hp2",
  "illuminant-hp3",
  "illuminant-hp4",
  "illuminant-hp5",
]
illuminant-hp1 = []
illuminant-hp2 = []
illuminant-hp3 = []
illuminant-hp4 = []
illuminant-hp5 = []
illuminant-id50 = []
illuminant-id65 = []
illuminant-led = [
  "illuminant-led-b1",
  "illuminant-led-b2",
  "illuminant-led-b3",
  "illuminant-led-b4",
  "illuminant-led-b5",
  "illuminant-led-bh1",
  "illuminant-led-rgb1",
  "illuminant-led-v1",
  "illuminant-led-v2",
]
illuminant-led-b1 = []
illuminant-led-b2 = []
illuminant-led-b3 = []
illuminant-led-b4 = []
illuminant-led-b5 = []
illuminant-led-bh1 = []
illuminant-led-rgb1 = []
illuminant-led-v1 = []
illuminant-led-v2 = []
illuminant-standard = ["illuminant-a", "illuminant-b", "illuminant-c", "illuminant-e"]
observer-cie-1931-judd-2d = []
observer-cie-1931-judd-vos-2d = []
observer-cie-1964-10d = []
observer-cie-2006-10d = []
observer-cie-2006-2d = []
observer-stockman-sharpe-10d = []
observer-stockman-sharpe-2d = []

[dev-dependencies]
pretty_assertions = "1.4"
